--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <h3>Howard Fearnhead, PhD</h3>
             <p class="person-role">Principal Investigator</p>
             <p class="person-text">
-              Howard is a Senior Lecturer in Pharmacology and Therapeutics at the University of Galway.
+              Howard Fwaenhead is a Senior Lecturer in Pharmacology and Therapeutics at the University of Galway.
               His research focuses on apoptotic and non-apoptotic roles of caspases, apoptosome regulation,
               and how protease signalling contributes to cancer, myotoxicity, and nervous system development.
             </p>
@@ -128,10 +128,10 @@
 
         <!-- Template cards you can duplicate / edit -->
         <div class="person-card">
-          <div class="avatar-placeholder">PD</div>
+          <div class="avatar-placeholder">PhD</div>
           <div>
-            <h3>Postdoctoral Researcher</h3>
-            <p class="person-role">Apoptosis &amp; Proteomics</p>
+            <h3>Fatemeh Fotouhi Chahooki, Hardioman Scholar and PhD Candidate</h3>
+            <p class="person-role">Caspases in Differentiation</p>
             <p class="person-text">
               Works on quantitative proteomics and N-terminomics to identify caspase substrates in
               apoptosis and differentiation.
@@ -140,24 +140,12 @@
         </div>
 
         <div class="person-card">
-          <div class="avatar-placeholder">PhD</div>
-          <div>
-            <h3>PhD Candidate</h3>
-            <p class="person-role">Caspases in Differentiation</p>
-            <p class="person-text">
-              Investigates how non-apoptotic caspase-3 and caspase-9 activity contributes to myotube
-              formation and neuronal differentiation.
-            </p>
-          </div>
-        </div>
-
-        <div class="person-card">
           <div class="avatar-placeholder">MSc</div>
           <div>
-            <h3>MSc / Project Student</h3>
-            <p class="person-role">Cell Painting &amp; Toxicology</p>
+            <h3>Pouya Abrari, Hardiman Scholar and PhD Candidate</h3>
+            <p class="person-role">Apoptosome siganlling and CARD-CARD interactions</p>
             <p class="person-text">
-              Uses high-content imaging and AI models to predict drug-induced cytotoxicity in muscle cells.
+              Develops new assays to study apoptosome functions and identify novel pharmacological agents to modify apoptosome activity.
             </p>
           </div>
         </div>
