--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         </div>
 
         <div class="person-card">
-          <div class="avatar-placeholder">MSc</div>
+          <div class="avatar-placeholder">PhD</div>
           <div>
             <h3>Pouya Abrari, Hardiman Scholar and PhD Candidate</h3>
             <p class="person-role">Apoptosome siganlling and CARD-CARD interactions</p>
