--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
           <div class="avatar-placeholder">PhD</div>
           <div>
             <h3>Pouya Abrari, Hardiman Scholar and PhD Candidate</h3>
-            <p class="person-role">Apoptosome siganlling and CARD-CARD interactions</p>
+            <p class="person-role">Apoptosome signalling and CARD-CARD interactions</p>
             <p class="person-text">
               Develops new assays to study apoptosome functions and identify novel pharmacological agents to modify apoptosome activity.
             </p>
