--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <h3>Howard Fearnhead, PhD</h3>
             <p class="person-role">Principal Investigator</p>
             <p class="person-text">
-              Howard Fwaenhead is a Senior Lecturer in Pharmacology and Therapeutics at the University of Galway.
+              Howard Fearnhead is a Senior Lecturer in Pharmacology and Therapeutics at the University of Galway.
               His research focuses on apoptotic and non-apoptotic roles of caspases, apoptosome regulation,
               and how protease signalling contributes to cancer, myotoxicity, and nervous system development.
             </p>
