--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <div class="person-card">
           <div class="avatar-placeholder">PhD</div>
           <div>
-            <h3>Fatemeh Fotouhi Chahooki, Hardioman Scholar and PhD Candidate</h3>
+            <h3>Fatemeh Fotouhi Chahooki, Hardiman Scholar and PhD Candidate</h3>
             <p class="person-role">Caspases in Differentiation</p>
             <p class="person-text">
               Works on quantitative proteomics and N-terminomics to identify caspase substrates in
