--- a/index.html
+++ b/index.html
@@ -266,10 +266,10 @@
         <p>
           <strong>Caspase Lab</strong><br>
           Pharmacology and Therapeutics<br>
-          School of Medicine, College of Medicine, Nursing &amp; Health Sciences<br>
+          School of Pharmacy and Health Sciences, College of Medicine, Nursing &amp; Health Sciences<br>
           University of Galway<br>
-          Human Biology Building, 3rd Floor<br>
-          University Road, Galway, H91 TK33, Ireland
+          Biomedical Sciences Building,<br>
+          Newcastle Road, Galway, H91 W2TY, Ireland
         </p>
 
         <p>
