--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
       <ul class="pub-list">
         <li>
           <span class="pub-title">An atlas of caspase cleavage events in differentiating neurons.</span>
-          <span class="pub-authors">Gómez-Cardona E, Dehkordi MH, Kolden Van Baar, Aiste Vitkauskaite, Olivier Julien, <strong>Fearnhead HO</strong>, et al.</span>
+          <span class="pub-authors">Gómez-Cardona E, Dehkordi MH, Kolden Van Baar, Aiste Vitkauskaite, Olivier Julien, <strong>Fearnhead HO</strong></span>
           <span class="pub-journal">Protein Sci. 2024;33(5):e5156. doi: 10.1002/pro.5156.</span>
         </li>
 
