--- a/index.html
+++ b/index.html
@@ -232,13 +232,13 @@
         <li>
           <span class="news-date">Mar 2025</span>
           <span class="news-text">
-            Our study on <em>drug-induced cytotoxicity prediction in muscle cells</em> using Cell Painting is published in PLoS One.
+            Our study on <em>drug-induced cytotoxicity prediction in myoblasts and differentaited muscle cells</em> using Cell Painting is published in PLoS One.
           </span>
         </li>
         <li>
           <span class="news-date">Jan 2024</span>
           <span class="news-text">
-            <em>An atlas of caspase cleavage events in differentiating neurons</em> is published, mapping caspase substrates during neuronal differentiation.
+            <em>An atlas of caspase cleavage events in differentiating myoblasts</em> is published, mapping caspase substrates during muscle differentiation.
           </span>
         </li>
         <li>
