--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
       <ul class="pub-list">
         <li>
-          <span class="pub-title">An atlas of caspase cleavage events in differentiating neurons.</span>
+          <span class="pub-title">An atlas of caspase cleavage events in differentiating muscle cells.</span>
           <span class="pub-authors">Gómez-Cardona E, Dehkordi MH, Kolden Van Baar, Aiste Vitkauskaite, Olivier Julien, <strong>Fearnhead HO</strong></span>
           <span class="pub-journal">Protein Sci. 2024;33(5):e5156. doi: 10.1002/pro.5156.</span>
         </li>
@@ -232,7 +232,7 @@
         <li>
           <span class="news-date">Mar 2025</span>
           <span class="news-text">
-            Our study on <em>drug-induced cytotoxicity prediction in myoblasts and differentaited muscle cells</em> using Cell Painting is published in PLoS One.
+            Our study on <em>drug-induced cytotoxicity prediction in myoblasts and differentiated muscle cells</em> using Cell Painting is published in PLoS One.
           </span>
         </li>
         <li>
