--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
         <article class="card">
           <h3>Non-Apoptotic Caspase Functions</h3>
           <p>
-            Caspases also have essential non-lethal roles in differentiation and nervous system
-            development. We map caspase cleavage events in differentiating cells and neurons to
-            understand how limited proteolysis remodels the cytoskeleton and signalling networks
-            without triggering full apoptosis.
+            Caspases also have essential non-lethal roles in differentiation and
+            development. We map caspase cleavage events in differentiating cells to
+            understand how caspase-mediated proteolysis remodels the proteome
+            without triggering apoptosis.
           </p>
         </article>
 
