--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
   <!-- HERO SECTION -->
   <section class="hero">
+    <img src="banner.png" alt="banner image" class="hero-image">
     <div class="container hero-inner">
       <div class="hero-text">
         <h1>Caspases in Death and Differentiation</h1>
